--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -13,7 +13,7 @@
           href: quick-setup-auto-provision.md
         - name: Azure CLI
           href: quick-setup-auto-provision-cli.md
-        - name: Azure RM テンプレート
+        - name: ARM テンプレート
           href: quick-setup-auto-provision-rm.md
     - name: 対称キー デバイスをプロビジョニングする
       items:
