--- a/articles/mysql/single-server/index.yml
+++ b/articles/mysql/single-server/index.yml
@@ -8,12 +8,12 @@ metadata:
   ms.date: 09/20/2020
   ms.service: mysql
   ms.topic: landing-page
-  ms.openlocfilehash: 20bde668fb333b76de44406072a835b8043eb376
-  ms.sourcegitcommit: d767156543e16e816fc8a0c3777f033d649ffd3c
+  ms.openlocfilehash: a2ae6e91481da51c77f3c73f4fd9b5d31169952d
+  ms.sourcegitcommit: 003ac3b45abcdb05dc4406661aca067ece84389f
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/26/2020
-  ms.locfileid: "92543731"
+  ms.lasthandoff: 12/07/2020
+  ms.locfileid: "96749132"
 landingContent:
 - title: シングル サーバーについて
   linkLists:
@@ -117,9 +117,9 @@ landingContent:
       url: ../howto-data-in-replication.md
     - text: Azure portal を使用してサーバーを復元する
       url: ../howto-restore-server-portal.md
-    - text: Azure portal を使用してサーバーを復元する
+    - text: Azure CLI を使用してサーバーを復元する
       url: ../howto-restore-server-cli.md
-- title: 関連項目
+- title: リファレンス
   linkLists:
   - linkListType: download
     links:
