commit translated contents

--- a/articles/purview/toc.yml
+++ b/articles/purview/toc.yml
@@ -28,6 +28,8 @@ items:
             href: tutorial-import-create-glossary-terms.md
       - name: オンプレミスの SQL サーバーの登録とスキャン
         href: register-scan-on-premises-sql-server.md
+      - name: カタログの REST API を呼び出す
+        href: tutorial-using-rest-apis.md
   - name: 概念
     items:
       - name: Purview Studio の使用
@@ -133,6 +135,10 @@ items:
             href: how-to-link-azure-data-factory.md
           - name: Azure Data Share のデータ系列
             href: how-to-link-azure-data-share.md
+      - name: Monitor
+        items:
+          - name: Azure Monitor による監視
+            href: how-to-monitor-with-azure-monitor.md
       - name: 洞察
         items:
           - name: アセットの分析情報を表示する
