--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -9,70 +9,8 @@
       href: whats-new.md
 - name: クイックスタート
   items:
-    - name: クライアント ライブラリの使用
+    - name: クライアント ライブラリまたは REST API の使用
       href: quickstarts-sdk/client-library.md
-    - name: REST API の使用
-      items:
-        - name: リモート画像の分析
-          items:
-            - name: Go
-              href: QuickStarts/go-analyze.md
-            - name: Java
-              href: QuickStarts/java-analyze.md
-            - name: JavaScript
-              href: QuickStarts/javascript-analyze.md
-            - name: Node.js
-              href: QuickStarts/node-analyze.md
-            - name: Python
-              href: QuickStarts/python-analyze.md
-        - name: ローカル画像の分析
-          items:
-            - name: C#
-              href: QuickStarts/CSharp-analyze.md
-            - name: Python
-              href: QuickStarts/python-disk.md
-        - name: サムネイルの生成
-          items:
-            - name: C#
-              href: QuickStarts/CSharp-thumb.md
-            - name: Go
-              href: QuickStarts/go-thumb.md
-            - name: Java
-              href: QuickStarts/java-thumb.md
-            - name: JavaScript
-              href: QuickStarts/javascript-thumb.md
-            - name: Node.js
-              href: QuickStarts/node-thumb.md
-            - name: Python
-              href: QuickStarts/python-thumb.md
-        - name: テキストの抽出 (Read API)
-          items:
-            - name: C#
-              href: QuickStarts/CSharp-hand-text.md
-            - name: Java
-              href: QuickStarts/java-hand-text.md
-            - name: JavaScript
-              href: QuickStarts/javascript-hand-text.md
-            - name: Python
-              href: QuickStarts/python-hand-text.md
-        - name: テキストの抽出 (OCR API)
-          items:
-            - name: C#
-              href: QuickStarts/CSharp-print-text.md
-            - name: Go
-              href: QuickStarts/go-print-text.md
-            - name: Java
-              href: QuickStarts/java-print-text.md
-            - name: JavaScript
-              href: QuickStarts/javascript-print-text.md
-            - name: Node.js
-              href: QuickStarts/node-print-text.md
-            - name: Python
-              href: QuickStarts/python-print-text.md
-        - name: ドメイン モデルの使用
-          items:
-            - name: Python
-              href: QuickStarts/python-domain.md
 - name: チュートリアル
   items:
     - name: 画像のメタデータを生成する
