--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -464,6 +464,9 @@
         - name: Data Box のオンライン転送
           tocHref: /azure/databox-online/
           topicHref: /azure/databox-online/
+        - name: Data Box Gateway
+          tocHref: /azure/databox-gateway/
+          topicHref: /azure/databox-gateway/
     - name: Data Catalog
       tocHref: /azure/data-catalog/
       topicHref: /azure/data-catalog/
@@ -908,3 +911,6 @@
         - name: Reservations
           tocHref: /azure/cost-management-billing/reservations/
           topicHref: /azure/cost-management-billing/reservations/
+    - name: Purview
+      tocHref: /azure/purview/
+      topicHref: /azure/purview/
