--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -37,6 +37,8 @@
           href: how-to-automatic-language-detection.md
         - name: バッチ文字起こし API を使用する
           href: batch-transcription.md
+        - name: v2.0 から v3.0 への移行
+          url: migrate-v2-to-v3.md
         - name: 発音を評価する
           href: how-to-pronunciation-assessment.md
     - name: チュートリアル
