--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -453,6 +453,8 @@
               href: flexible-server/connect-python.md
     - name: チュートリアル
       items:
+        - name: Azure Kubernetes での WordPress
+          href: flexible-server/tutorial-deploy-wordpress-on-aks.md
         - name: データベースを使用した PHP (Laravel) アプリを作成する
           href: flexible-server/tutorial-php-database-app.md
         - name: プライベート Web アプリを使用して接続する
