commit translated contents

--- a/articles/data-lake-analytics/TOC.yml
+++ b/articles/data-lake-analytics/TOC.yml
@@ -111,6 +111,8 @@
               href: data-lake-analytics-data-lake-tools-for-vscode.md
             - name: カスタム コード
               href: data-lake-analytics-u-sql-develop-with-python-r-csharp-in-vscode.md
+            - name: リソースへのアクセス
+              href: data-lake-analytics-data-lake-tools-for-vscode-access-resource.md
             - name: ローカルの実行とデバッグ
               href: data-lake-tools-for-vscode-local-run-and-debug.md
         - name: プログラミング ガイド
