--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -416,6 +416,18 @@ groups:
     title: Go
   - id: programming-language-python
     title: Python
+- id: programming-languages-set-face
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-go
+    title: Go
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-rest-api
+    title: REST API
 - id: programming-languages-set-two-with-js
   title: プログラミング言語
   prompt: プログラミング言語を選択する
@@ -875,9 +887,9 @@ groups:
   - id: programming-languages-objectivec-swift
     title: Objective-C/Swift
 metadata:
-  ms.openlocfilehash: 23b11aa4d6726294c7f4482f53e5ce99d04eddd3
-  ms.sourcegitcommit: 5b93010b69895f146b5afd637a42f17d780c165b
+  ms.openlocfilehash: 3fd451bb34d4a0a83821018cc8a6ab519c55e12d
+  ms.sourcegitcommit: d6e92295e1f161a547da33999ad66c94cf334563
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/02/2020
-  ms.locfileid: "96532875"
+  ms.lasthandoff: 12/07/2020
+  ms.locfileid: "96763538"
