--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -66,6 +66,8 @@
           href: sap-hana-backup-support-matrix.md
         - name: Azure ファイル共有のバックアップのサポート マトリックス
           href: azure-file-share-support-matrix.md
+        - name: Active Directory ドメイン コントローラー
+          href: active-directory-backup-restore.md
         - name: Azure Policy 向けにサポートされる VM SKU
           href: backup-azure-policy-supported-skus.md
     - name: よく寄せられる質問 (FAQ)
