--- a/articles/key-vault/keys/toc.yml
+++ b/articles/key-vault/keys/toc.yml
@@ -15,6 +15,8 @@
       href: quick-create-portal.md
     - name: .NET
       href: quick-create-net.md
+    - name: Node.js
+      href: quick-create-node.md
     - name: Python
       href: quick-create-python.md
     - name: ARM テンプレート
