--- a/articles/virtual-machine-scale-sets/TOC.yml
+++ b/articles/virtual-machine-scale-sets/TOC.yml
@@ -112,7 +112,7 @@
           href: virtual-machine-scale-sets-manage-fault-domains.md
       maintainContext: true
     - name: イメージ
-      href: shared-image-galleries.md
+      href: ../virtual-machines/shared-image-galleries.md?toc=%2fazure%2fvirtual-machine-scale-sets%2fwindows%2ftoc.json
     - name: VM の種類とサイズ
       href: ../virtual-machines/sizes.md
       items:
