--- a/articles/azure-monitor/index.yml
+++ b/articles/azure-monitor/index.yml
@@ -8,12 +8,12 @@ metadata:
   author: rboucher
   ms.author: robb
   ms.date: 10/08/2019
-  ms.openlocfilehash: b4d95c54bbfce19443bf862685390fb087aaeffd
-  ms.sourcegitcommit: d22a86a1329be8fd1913ce4d1bfbd2a125b2bcae
+  ms.openlocfilehash: 3fe4dd31fa6132401b09ac80d0c2cbf62b8b83e1
+  ms.sourcegitcommit: 80c1056113a9d65b6db69c06ca79fa531b9e3a00
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/26/2020
-  ms.locfileid: "96186934"
+  ms.lasthandoff: 12/09/2020
+  ms.locfileid: "96905623"
 landingContent:
 - title: Azure Monitor について
   linkLists:
@@ -56,9 +56,9 @@ landingContent:
   - linkListType: get-started
     links:
     - text: .NET
-      url: learn/quick-monitor-portal.md
+      url: app/asp-net.md
     - text: .NET Core
-      url: learn/dotnetcore-quick-start.md
+      url: app/asp-net-core.md
     - text: Node.js
       url: learn/nodejs-quick-start.md
     - text: モバイル
