--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -346,6 +346,8 @@
           href: monitor-logic-apps.md
         - name: Azure Monitor ログでロジック アプリを監視する
           href: monitor-logic-apps-log-analytics.md
+        - name: Azure Security Center でロジック アプリを監視する
+          href: healthy-unhealthy-resource.md
         - name: Azure Monitor ログで B2B メッセージを監視する
           href: monitor-b2b-messages-log-analytics.md
         - name: 監視と追跡クエリを作成する
