--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -95,6 +95,8 @@
       href: ../../mysql/security-baseline.md
     - name: Azure Database for MariaDB のセキュリティ ベースライン
       href: ../../mariadb/security-baseline.md
+    - name: Azure Database Migration Service セキュリティ ベースライン
+      href: ../../dms/security-baseline.md
     - name: Azure Database for PostgreSQL - Hyperscale のセキュリティ ベースライン
       href: ../../postgresql/postgresql-hyperscale-security-baseline.md
     - name: Azure Database for PostgreSQL - 単一サーバーのセキュリティ ベースライン
