--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -121,16 +121,48 @@
           href: signin-appauth-ios.md
         - name: AppAuth を使用した Android
           href: signin-appauth-android.md
+    - name: ID プロバイダー
+      items:
+        - name: ID プロバイダーの追加
+          href: add-identity-provider.md
+        - name: AD FS
+          href: identity-provider-adfs.md
+        - name: Amazon
+          href: identity-provider-amazon.md
+        - name: Azure AD (シングルテナント)
+          href: identity-provider-azure-ad-single-tenant.md
+        - name: Azure AD (マルチテナント)
+          href: identity-provider-azure-ad-multi-tenant.md
+        - name: Facebook
+          href: identity-provider-facebook.md
+        - name: 汎用の ID プロバイダー
+          href: identity-provider-generic-openid-connect.md
+        - name: GitHub
+          href: identity-provider-github.md
+        - name: Google
+          href: identity-provider-google.md
+        - name: LinkedIn
+          href: identity-provider-linkedin.md
+        - name: Microsoft アカウント
+          href: identity-provider-microsoft-account.md
+        - name: QQ
+          href: identity-provider-qq.md
+        - name: Salesforce
+          href: identity-provider-salesforce.md
+        - name: Twitter
+          href: identity-provider-twitter.md
+        - name: WeChat
+          href: identity-provider-wechat.md
+        - name: Weibo
+          href: identity-provider-weibo.md
     - name: ユーザー フロー
       items:
         - name: フローを作成する
           items:
-            - name: ユーザー フローを作成する
-              href: create-user-flow.md
+            - name: サインアップまたはサインイン
+              href: tutorial-create-user-flows.md
             - name: リソース所有者のパスワード資格情報
               href: configure-ropc.md
-            - name: 電話認証の設定
-              href: phone-authentication-user-flows.md
             - name: セルフサービス パスワードのリセットの設定
               href: user-flow-self-service-password-reset.md
         - name: 条件付きアクセスの追加
@@ -150,32 +182,6 @@
             - name: MFA の有効化
               href: custom-policy-multi-factor-authentication.md
               displayName: multi-factor auth
-        - name: 外部 ID プロバイダー
-          items:
-            - name: Amazon
-              href: identity-provider-amazon.md
-            - name: Azure AD (シングルテナント)
-              href: identity-provider-azure-ad-single-tenant.md
-            - name: Microsoft アカウント
-              href: identity-provider-microsoft-account.md
-            - name: Facebook
-              href: identity-provider-facebook.md
-            - name: GitHub
-              href: identity-provider-github.md
-            - name: Google
-              href: identity-provider-google.md
-            - name: LinkedIn
-              href: identity-provider-linkedin.md
-            - name: QQ
-              href: identity-provider-qq.md
-            - name: Twitter
-              href: identity-provider-twitter.md
-            - name: WeChat
-              href: identity-provider-wechat.md
-            - name: Weibo
-              href: identity-provider-weibo.md
-            - name: 汎用の ID プロバイダー
-              href: identity-provider-generic-openid-connect.md
         - name: トークンおよびセッション管理
           items:
             - name: トークンを構成する
@@ -236,32 +242,6 @@
               href: javascript-samples.md
             - name: パスワードの複雑さ
               href: custom-policy-password-complexity.md
-        - name: 外部 ID プロバイダー
-          items:
-            - name: OIDC および OAuth プロバイダー
-              items:
-                - name: Amazon
-                  href: identity-provider-amazon-custom.md
-                - name: Azure AD (シングルテナント)
-                  href: identity-provider-azure-ad-single-tenant-custom.md
-                - name: Azure AD (マルチテナント)
-                  href: identity-provider-azure-ad-multi-tenant-custom.md
-                - name: Google
-                  href: identity-provider-google-custom.md
-                - name: LinkedIn
-                  href: identity-provider-linkedin-custom.md
-                - name: Microsoft アカウント
-                  href: identity-provider-microsoft-account-custom.md
-                - name: Twitter
-                  href: identity-provider-twitter-custom.md
-            - name: SAML プロバイダー
-              items:
-                - name: AD FS
-                  href: identity-provider-adfs2016-custom.md
-                  displayName: SAML
-                - name: Salesforce
-                  href: identity-provider-salesforce-custom.md
-                  displayName: SAML
         - name: トークンおよびセッション管理
           items:
             - name: トークンのカスタマイズ
