--- a/articles/cognitive-services/QnAMaker/index.yml
+++ b/articles/cognitive-services/QnAMaker/index.yml
@@ -11,12 +11,12 @@ metadata:
   services: cognitive-services
   title: QnA Maker のドキュメント
   description: QnA Maker は、データに基づく対話型の Q&A レイヤーを作成できるクラウドベースの API サービスです。 QnA Maker を使用すると、FAQ ドキュメント、URL、製品マニュアルなどの半構造化コンテンツからの質問と回答サービスをいっそう強力にできます。 QnA Maker サービスでは、ユーザーが自然言語を使って行った質問に対し、ナレッジにある Q&A から回答となる可能性が最も高いものが提示されます。
-  ms.openlocfilehash: 54c5e8c880020ac4c29dc730902dadef10838390
-  ms.sourcegitcommit: 9eda79ea41c60d58a4ceab63d424d6866b38b82d
+  ms.openlocfilehash: d1236b8a40d43ac5203cd4cac8aa607c925a04d7
+  ms.sourcegitcommit: 1756a8a1485c290c46cc40bc869702b8c8454016
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/30/2020
-  ms.locfileid: "96338090"
+  ms.lasthandoff: 12/09/2020
+  ms.locfileid: "96932729"
 landingContent:
 - title: QnA Maker について
   linkLists:
@@ -50,7 +50,7 @@ landingContent:
     links:
     - text: フォローアップ プロンプトを使用して、複数のターンを含む会話を作成します。
       url: how-to/multiturn-conversation.md
-    - text: おしゃべりを追加する
+    - text: おしゃべりの追加
       url: how-to/chit-chat-knowledge-base.md
     - text: セキュリティで保護された SharePoint データ ソースを追加する
       url: how-to/add-sharepoint-datasources.md
