--- a/articles/cognitive-services/Face/toc.yml
+++ b/articles/cognitive-services/Face/toc.yml
@@ -7,28 +7,8 @@
       href: Overview.md
 - name: クイックスタート
   items:
-    - name: クライアント ライブラリの使用
+    - name: クライアント ライブラリまたは REST API を使用する
       href: Quickstarts/client-libraries.md
-    - name: REST API の使用
-      items:
-        - name: 画像内の顔を検出する
-          items:
-            - name: C#
-              href: QuickStarts/CSharp.md
-            - name: Go
-              href: QuickStarts/go.md
-            - name: Java
-              href: QuickStarts/Java.md
-            - name: JavaScript
-              href: QuickStarts/JavaScript.md
-            - name: Node.js
-              href: QuickStarts/node.md
-            - name: PHP
-              href: QuickStarts/PHP.md
-            - name: Python
-              href: QuickStarts/Python.md
-            - name: Ruby
-              href: QuickStarts/Ruby.md
 - name: チュートリアル
   items:
     - name: クライアント SDK の使用
