--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -12,13 +12,13 @@ metadata:
   author: j-martens
   ms.author: jmartens
   ms.date: 09/21/2020
-  ms.custom: contperfq1
-  ms.openlocfilehash: 54947b5a6ab15e52622f1710d5d4f78a314b0d21
-  ms.sourcegitcommit: 96918333d87f4029d4d6af7ac44635c833abb3da
+  ms.custom: contperf-fy21q1
+  ms.openlocfilehash: f6664dd78effd3a1f203a564265f1dc7a1f0ce03
+  ms.sourcegitcommit: 3ea45bbda81be0a869274353e7f6a99e4b83afe2
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/04/2020
-  ms.locfileid: "93310409"
+  ms.lasthandoff: 12/10/2020
+  ms.locfileid: "97031319"
 landingContent:
 - title: 作業を開始しましょう。コード ファースト
   linkLists:
