--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -192,9 +192,9 @@
     - name: Logic Apps のセキュリティ ベースライン
       href: ../../logic-apps/security-baseline.md
     - name: Microsoft Cloud App Security ベースライン
-      href: /cloud-app-security/security-baseline.md
+      href: 'https://docs.microsoft.com/cloud-app-security/security-baseline'
     - name: Microsoft Defender for Identity のセキュリティ ベースライン
-      href: /defender-for-identity/security-baseline.md
+      href: 'https://docs.microsoft.com/defender-for-identity/security-baseline'
     - name: Network Watcher のセキュリティベースライン
       href: ../../network-watcher/security-baseline.md
     - name: Power BI のベースライン
