--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -89,6 +89,8 @@
       maintainContext: true
     - name: ストレージ アカウントのアップグレード
       href: ../common/storage-account-upgrade.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+    - name: 削除されたストレージ アカウントを復旧します
+      href: ../common/storage-account-recover.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
     - name: ストレージ エミュレーターを使用する
       href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
       maintainContext: true
